[package]
name = "cthulhu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
async-compression = { version = "0.4.0", features = ["tokio", "brotli", "gzip", "zlib", "zstd"] }
tokio = { version = "1.24.2", features = ["full"] }

tokio-util = { version = "0.7.10", features = ["full"] }
rustls-pki-types = "1.11.0"
tokio-rustls = { version = "0.26.0", features = ["logging", "tls12"] }
tokio-tungstenite = { version = "0.26.1",features = ["__rustls-tls"] }

tokio-graceful = "0.2.0"
#hyper-rustls = { version = "0.27.0", default-features = false, features = ["http1", "logging", "tls12", "webpki-tokio"], optional = true }
hyper-tls = { version = "0.6.0", optional = true }
hyper-tungstenite = "0.17.0"
hyper-util = { version="0.1.3", features = ["client-legacy", "server", "http1"] }

http-body-util = "0.1.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = { version = "0.27.5", features = ["http1", "http2", "logging", "tls12", "rustls-native-certs", "webpki-roots"] }

headers = "0.3"
reqwest = { version = "0.12.12", features = ["json","__rustls","__tls","cookies","stream"] }

rustls = { version = "0.21.6", features = ["default"] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"

moka = { version = "0.12.0", features = ["future"] }



bstr = "1.0.0"
time = "0.3.34"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

rcgen = { version = "0.13.0", features = ["x509-parser"] }
rsa = "0.9.2"
rand = "0.8.5"
ring = "0.16.20"
pem = { version = "2.0.1" }


futures = "0.3.29"


local-ip-address = "0.5.6"
clap = "4.4.11"

thiserror = "1.0.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }



[target.'cfg(windows)'.dependencies]
# 这个依赖只会在Windows平台上包含
winreg = "0.51.0"


# [target.x86_64-unknown-linux-musl]
# linker = "rust-lld"

